Use is_completed mapping
